# DragonTail

./: CMakeLists.txt  CONCEPTS.md  CoGeCs.sln  Configure_MSVC.bat  Configure_MSVCx64.bat  Configure_Make.bat  Configure_Make.sh  README.md
cogecs/: CMakeLists.txt  ast.cpp  ast.h  astcloner.h  astvisitor.h  builtin.h  cfg_flatten.h  code_emitter.h  cogecs.vcxproj  cogecs.vcxproj.filters  compiler.h  driver.cpp  dumpvisitor.h  expressions.h  grammar.g  grammar_1.g  interpreter.h  jitcompiler.h  nullvisitor.h  prefixtree.h  symbol_table.h  tools.h
cogecs/dparser/: d.h  dparse.h  dparse_tables.h  dparse_tree.c  dparse_tree.h  gram.c  grammar.g  grammar.g.c  grammar.g.d_parser.c  lex.c  lex.h  lr.c  mkdparse.h  my.c  parse.c  read_binary.c  read_binary.h  scan.c  symtab.c  util.c  util.h  version.c  write_tables.c  write_tables.h
docs/: lang.txt
googletest/: CMakeLists.txt
make_dparser/: CMakeLists.txt  arg.c  arg.h  d.h  dparse_tree.c  driver_parsetree.c  dsymtab.h  gram.c  gram.h  gramgram.h  lex.c  lr.c  lr.h  make_dparser.c  make_dparser.vcxproj  mkdparse.c  parse.c  parse.h  sample_parser.c  scan.h  symtab.c  test_parser.c  util.c  util.h  write_tables.c
snippets/: test.cgs  test2.cgs  test3.cgs  test4.cgs  test5.cgs
snippets/loopspointers/: malloc.cgs  stack_pointer.cgs  test1.cgs  test2.cgs  test3.cgs  test4.cgs  test6.cgs  test7.cgs
src/: CMakeLists.txt  ast.cpp  ast.h  astcloner.h  astvisitor.h  builtin.h  cfg_flatten.h  code_emitter.h  compiler.h  driver.cpp  dumpvisitor.h  grammar.g  interpreter.h  jitcompiler.h  nullvisitor.h  sema.h  symbol_table.h  tools.h
src/dparser/: arg.c  d.h  dparse_tree.c  gram.c  grammar.g.d_parser.c  lex.c  lr.c  my.c  parse.c  read_binary.c  symtab.c  util.c  util.h  version.c  write_tables.c
tests/: CMakeLists.txt  ast.txt  codegen.h  compiler.h  compilertests.h  prefixtree.h  testdriver.cpp  tools.h
